<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/closePopup"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_gravity="end"
        android:text="X"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_diff"
        android:textSize="@dimen/tv_top_menu"
        android:layout_gravity="center"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <WebView
            android:id="@+id/mWebView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/tv_top_menu"/>
        <Button
            android:id="@+id/btVideo"
            android:onClick="ShowpopupPdfdiff"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/btn_pdf"
            android:textSize="@dimen/tv_subject"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@drawable/botton_styles"
            />
        <Button
            android:id="@+id/btPdf"
            android:onClick="ShowpopupVideoDiff"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/btn_video"
            android:textSize="@dimen/tv_subject"
            android:layout_margin="10dp"
            android:layout_toLeftOf="@+id/btVideo"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:background="@drawable/botton_styles"
            />
    </RelativeLayout>


</LinearLayout>