<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="confirmAnimate.json"
        app:lottie_loop="true" />


    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/animation_view"
        android:layout_centerInParent="true"
        android:layout_margin="1dp"
        android:text="@string/sure"
        android:textSize="24dp" />

    <LinearLayout
        android:id="@+id/ln_description_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ln_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/show_mail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:layout_margin="1dp"
                android:text="Email :"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/mail_text_intent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:ems="15"
                android:freezesText="true"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ln_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ln_mail"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/subject_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:layout_margin="1dp"
                android:text="Subject :"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/subject_Text_intent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="15"
                android:freezesText="true"
                android:hint="@string/subject"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ln_subject"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/description_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:layout_margin="1dp"
                android:text="Subject :"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/message_Text_intent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="15"
                android:freezesText="true"
                android:hint="@string/message"
                android:lines="6" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/okButtonIntent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ln_description_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="Confirm" />

</RelativeLayout>