<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:background="@color/white"-->
        <!--android:id="@+id/button_nev"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:itemTextColor="@color/colorAccent"-->
        <!--app:menu="@menu/nav_menu"></android.support.design.widget.BottomNavigationView>-->


    <LinearLayout
        android:id="@+id/button_nev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:onClick="goToHome"
            android:id="@+id/navigation_home"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_menu_bottom_height"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/tv_home"
            android:textColor="@color/colorRedApp"
            android:textSize="@dimen/tv_bottom_menu" />

        <TextView
            android:onClick="goToFAQ"
            android:id="@+id/navigation_FAQ"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_menu_bottom_height"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/tv_faq"
            android:textColor="@color/colorRedApp"
            android:textSize="@dimen/tv_bottom_menu" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <View
            android:onClick="goToSearch"
            android:id="@+id/navigation_scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-3dp"
            android:background="@drawable/search_circle"

            />

        <!--<com.airbnb.lottie.LottieAnimationView-->
            <!--android:id="@+id/animation_search"-->
            <!--android:layout_width="70dp"-->
            <!--android:layout_height="70dp"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--app:lottie_autoPlay="true"-->
            <!--app:lottie_fileName="animation-w600-h600.json"-->
            <!--app:lottie_loop="true" />-->

        <View
            android:id="@+id/icon_search"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/icon_search"
            />


    </RelativeLayout>


    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_nev">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:background="@color/colorAccent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/appbar_text_size"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                />
        </android.support.design.widget.AppBarLayout>

    </FrameLayout>


</RelativeLayout>